syntax = "proto3";

option go_package = "/pb";


message User {
    string name = 1;
    string city = 2;
    uint64 phone = 3;
    uint64 height = 4;
    bool Married = 5;
    uint32 id = 6;
}

message CreateUserRequest {
    string name = 1;
    string city = 2;
    uint64 phone = 3;
    uint64 height = 4;
    bool Married = 5;
}

message CreateUserResponse {
    string name = 1;
    string city = 2;
    uint64 phone = 3;
    uint64 height = 4;
    bool Married = 5;
    uint32 id = 6;
}

message GetUserByIdRequest {
    uint32 id = 1;
}

message GetUserByIdResponse {
    string name = 1;
    string city = 2;
    uint64 phone = 3;
    uint64 height = 4;
    bool Married = 5;
    uint32 id = 6;
}

message GetUsersListByIdsRequest {
    repeated uint32 ids = 1;
}  

message GetUsersListByIdsResponse {
    repeated User users = 1;
}

message DeleteUserByIdRequest {
    uint32 id = 1;
}

message DeleteUserByIdResponse {
}

message UpdateUserRequest {
    uint32 id = 1;
    optional string name = 2;
    optional string city = 3;
    optional uint64 phone = 4;
    optional uint64 height = 5;
    optional bool Married = 6;
}

message UpdateUserResponse {
}

message SearchUsersRequest {
    optional string name = 1;
    optional string city = 2;
    optional uint64 phone = 3;
    optional uint64 height = 4;
    optional bool Married = 5;
}

message SearchUsersResponse {
    repeated User users = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse) {}
    rpc GetUsersListByIds(GetUsersListByIdsRequest) returns (GetUsersListByIdsResponse) {}
    rpc DeleteUserById(DeleteUserByIdRequest) returns (DeleteUserByIdResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse) {}
}
